# gnome-shell-extension-arc-menu

./: Makefile  constants.js  gnome-shell-extension-arc-menu_49.orig.tar.gz.delta  gnome-shell-extension-arc-menu_49.orig.tar.gz.id  menuButton.js  meson.build  metadata.json  prefs.js
debian/: changelog  control  control.in  copyright  install  rules  watch
po/: LINGUAS  POTFILES.in  arcmenu.pot  de.po  he.po  oc.po  ru.po  sv.po  tr.po
schemas/: meson.build  org.gnome.shell.extensions.arcmenu.gschema.xml
